# langparse

./: .gitignore  README.md  README_cn.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pypi-publish.yml
docs/: INSTALL_TEST.md
docs/superpowers/plans/: 2026-04-16-parser-platform-mineru.md  2026-06-02-langparse-product-readiness.md
docs/superpowers/specs/: 2026-04-16-parser-platform-mineru-design.md  2026-06-02-langparse-product-readiness-design.md
examples/: README.md  benchmark_usage.py  mineru_batch_service.py  mineru_local_managed.py  mineru_remote_api.py
langparse/: __init__.py  autoparser.py  cli.py  config.py  errors.py  metrics.py  types.py
langparse/chunkers/: semantic.py
langparse/core/: chunker.py  engine.py  parser.py
langparse/engines/pdf/: __init__.py  mineru.py  mineru_client.py  mineru_service.py  other.py  simple.py  vision_llm.py
langparse/parsers/: docx_parser.py  excel_parser.py  markdown_parser.py  pdf_parser.py
langparse/services/: __init__.py  batch_service.py  benchmark_service.py  parse_service.py  quality.py
samples/: public.example.json
scripts/: download_mineru_models.py
tests/: test_autoparser.py  test_batch_service.py  test_benchmark_service.py  test_cli.py  test_config.py  test_errors.py  test_metrics.py  test_mineru_engine.py  test_parse_service.py  test_pdf_parser.py  test_quality.py
